Work on exercises

--- a/MRIO_seminal_works/MRIO_seminal_works_sv.ipynb
+++ b/MRIO_seminal_works/MRIO_seminal_works_sv.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
@@ -55,11 +55,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import exiobase"
+    "# Import exiobase\n",
+    "path = 'data/IOT_2001_pxp/' \n",
+    "\n",
+    "# the first data entities we need are A, Y, F and F_hh\n",
+    "\n",
+    "# A: direct requirements matrix\n",
+    "#                       1st+2nd columns used for indices here ↓,        and ↓ here is headers \n",
+    "A = pd.read_csv(f'{path}A.txt', sep='\\t', index_col=[0,1], header=[0,1]) \n",
+    "# Y: final demand matrix\n",
+    "Y = pd.read_csv(f'{path}Y.txt', sep='\\t', index_col=[0,1], header=[0,1])\n",
+    "# F: value added matrix\n",
+    "F = pd.read_csv(f'{path}satellite/F.txt', sep='\\t', index_col=[0], header=[0,1]) # satellite account\n",
+    "# F_hh: household consumption matrix\n",
+    "F_hh = pd.read_csv(f'{path}satellite/F_Y.txt', sep='\\t', index_col=[0], header=[0,1]) # satellite account"
    ]
   },
   {
@@ -78,26 +91,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# An identy matrix of the size as A-matrix\n",
     "\n",
-    "## Leontief inverse matrix"
+    "## Leontief inverse matrix\n",
+    "# L = (I - A)^-1\n",
+    "I = np.identity(A.shape[0])\n",
+    "L = np.linalg.inv(I - A)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Calculate total output vector (x)\n",
     "\n",
-    "# Sum of all final demand categories\n",
+    "# Sum of all final demand categories: \n",
     "\n",
-    "# Total outputs"
+    "# axis parameter determines axis along which the sum operation is performed\n",
+    "# axis=1 indicates that the sum should be calculated along the rows of the Y object \n",
+    "# by summing along the rows (axis=1), the Y.sum(1) operation will return a \n",
+    "# new object y_total that contains the sum of each row in Y.\n",
+    "y_total = Y.sum(axis=1)\n",
+    "\n",
+    "# Total outputs: x = L * y \n",
+    "# and we're using '@' for matrix multiplication\n",
+    "x = L @ y_total\n"
    ]
   },
   {
@@ -114,7 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "indicator = None\n",
+    "indicator = 'CO2 - combustion - air' # Label \n",
     "# select CO2 vector\n",
     "F_ = None "
    ]
@@ -380,7 +404,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.12"
   },
   "vscode": {
    "interpreter": {
