--- a/IOT_n_national_accounts/IOT_n_national.ipynb
+++ b/IOT_n_national_accounts/IOT_n_national.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "id": "89a776a4-3fd8-46c1-9940-53765b5dcbad",
    "metadata": {
     "slideshow": {
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "id": "de4aa089-5c9d-4f22-92c8-90d1f73e45bf",
    "metadata": {
     "slideshow": {
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "id": "6b6d5aaa",
    "metadata": {
     "slideshow": {
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "id": "342a2a9e",
    "metadata": {
     "slideshow": {
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 36,
    "id": "adcdf780",
    "metadata": {
     "slideshow": {
@@ -265,7 +265,7 @@
     "# organize and plot your results for the income approach\n",
     "\n",
     "GDP_breakdown = GDP_data[GDP_data.na_item.isin(breakdown_income)]\n",
-    "plt.figure(figsize=(8,4))\n",
+    "plt.figure(figsize=(8,4)) \n",
     "\n",
     "country_GDP_series = {}\n",
     "for country in GDP_breakdown.geo.unique(): # loop through all the countries\n",
@@ -277,7 +277,7 @@
     "        yearly_GDP[year] = year_data.OBS_VALUE.sum() \n",
     "                \n",
     "    plt.plot(yearly_GDP.keys(), yearly_GDP.values(), label=country) \n",
-    "    country_GDP_series[country] = yearly_GDP\n",
+    "    country_GDP_series[country] = yearly_GDP \n",
     "\n",
     "NA_GDP_approaches_results[\"income\"] = country_GDP_series\n",
     "plt.legend(loc='upper center', bbox_to_anchor=(0.5, -0.1), fancybox=True, ncol=7)\n",
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 37,
    "id": "febb2ccf",
    "metadata": {
     "slideshow": {
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 38,
    "id": "00a59880",
    "metadata": {
     "slideshow": {
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 39,
    "id": "2d8c9bae",
    "metadata": {
     "slideshow": {
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 40,
    "id": "20d14d57",
    "metadata": {
     "slideshow": {
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 41,
    "id": "bce4aa27",
    "metadata": {
     "slideshow": {
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 42,
    "id": "f4158925-2d16-4901-a5f1-08c422e976aa",
    "metadata": {
     "slideshow": {
@@ -567,7 +567,7 @@
    ],
    "source": [
     "# Load the IO data\n",
-    "CBS_IO = pd.ExcelFile(f\"data/CBS/83 InputOutput tables 20152021.xlsx\", engine=\"openpyxl\")\n",
+    "CBS_IO = pd.ExcelFile(f\"data/83 InputOutput tables 20152021.xlsx\", engine=\"openpyxl\")\n",
     "\n",
     "# Print the list of sheets that are available in the xlsx file so that you can investigate what options you have\n",
     "print(*CBS_IO.sheet_names, sep=\"\\n\")"
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 43,
    "id": "9a38df65",
    "metadata": {
     "slideshow": {
@@ -610,7 +610,7 @@
     "# Negative items\n",
     "# Makes sure that the items marked with a negative sign in their labels are indeed negative\n",
     "items_with_neg = [\"Subsidies on domestic products (–)\",\"Import subsidies (–)\",\"Other subsidies on production (–)\"]\n",
-    "IO_2021_cp.loc[(items_with_neg)] = IO_2021_cp.loc[items_with_neg] *-1\n",
+    "IO_2021_cp.loc[(items_with_neg)] = IO_2021_cp.loc[items_with_neg] * -1\n",
     "\n",
     "# Print the columns and index to understand how the data is structured\n",
     "\n",
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 44,
    "id": "8a282134",
    "metadata": {
     "slideshow": {
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 45,
    "id": "1f5fc6ef",
    "metadata": {
     "slideshow": {
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 46,
    "id": "7a386c66-b7a8-4be5-8c33-713c682ebb99",
    "metadata": {
     "slideshow": {
@@ -705,7 +705,7 @@
        "856356.0"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,7 +727,7 @@
     "\n",
     "income_breakdown = IO_2021_cp.loc[income_items]\n",
     "\n",
-    "# We need to drop the total so that we don't double count\n",
+    "# We need to drop the total so that we don't double count \n",
     "income_breakdown = income_breakdown.drop([\"Total (1–81)\",\"Total\"] ,axis=1)\n",
     "\n",
     "IO_GDP_approaches_results[\"income\"] = income_breakdown.values.sum()\n",
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 47,
    "id": "cac67f38",
    "metadata": {
     "slideshow": {
@@ -751,7 +751,7 @@
        "856356.0"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 54,
    "id": "36be71bb",
    "metadata": {
     "slideshow": {
@@ -803,9 +803,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "production approach results: 856356.0 results are off by 0%\n",
-      "income approach results: 856356.0 results are off by 0%\n",
-      "expenditure approach results: 856356.0 results are off by 0%\n"
+      "762564.0\n",
+      "income approach results: 856356.0 results are off by 11%\n",
+      "expenditure approach results: 856356.0 results are off by 11%\n"
      ]
     }
    ],
@@ -813,7 +813,27 @@
     "# Calculate the production perspective use the Value added row\n",
     "# we use the value added row provided by the table as a reference to see whether our calculations are correct\n",
     "value_added = IO_2021_cp.loc[\"Value added at basic prices (92–96)\" , :\"Goods and services n.e.c.\"]\n",
-    "VA_total = value_added.values.sum() + taxes_less_subsidies.values.sum()\n",
+    "# display(value_added)\n",
+    "\n",
+    "\n",
+    "# taxes_less_subsidies = IO_2021_cp.loc[\"Net taxes on products\" , :\"Goods and services n.e.c.\"]\n",
+    "\n",
+    "\n",
+    "# \"Import duties\", \n",
+    "# \"Taxes on domestic products\",\n",
+    "# \"Import subsidies (–)\",\n",
+    "# \"Other taxes on imports\", \n",
+    "# \"Other taxes on production\", \n",
+    "# \"Subsidies on domestic products (–)\",\n",
+    "# \"Other subsidies on production (–)\"\n",
+    "\n",
+    "\n",
+    "VA_total = value_added.values.sum() # + taxes_less_subsidies.values.sum()\n",
+    "print(VA_total)\n",
+    "\n",
+    "#762564 is value added \n",
+    "#83097 (taxes on domestic products at final product) + 762564 (value added) = 845661 \n",
+    "# whatever ¯\\_(ツ)_/¯\n",
     "\n",
     "for l in IO_GDP_approaches_results:\n",
     "    print(f\"{l} approach results: {IO_GDP_approaches_results[l]} results are off by {round((1-VA_total/IO_GDP_approaches_results[l])*100)}%\")\n"
