--- a/supply_chain_linkages/supply_chain_linkages_sv.ipynb
+++ b/supply_chain_linkages/supply_chain_linkages_sv.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -86,26 +86,26 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Agriculture</th>\n",
-       "      <th>Manufacturing</th>\n",
-       "      <th>Services</th>\n",
+       "      <th>cAgriculture</th>\n",
+       "      <th>cManufacturing</th>\n",
+       "      <th>cServices</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Agriculture</th>\n",
+       "      <th>rAgriculture</th>\n",
        "      <td>0.6</td>\n",
        "      <td>2.6</td>\n",
        "      <td>0.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Manufacturing</th>\n",
+       "      <th>rManufacturing</th>\n",
        "      <td>0.8</td>\n",
        "      <td>30.6</td>\n",
        "      <td>7.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Services</th>\n",
+       "      <th>rServices</th>\n",
        "      <td>0.9</td>\n",
        "      <td>12.1</td>\n",
        "      <td>23.0</td>\n",
@@ -115,24 +115,26 @@
        "</div>"
       ],
       "text/plain": [
-       "               Agriculture  Manufacturing  Services\n",
-       "Agriculture            0.6            2.6       0.5\n",
-       "Manufacturing          0.8           30.6       7.8\n",
-       "Services               0.9           12.1      23.0"
+       "                cAgriculture  cManufacturing  cServices\n",
+       "rAgriculture             0.6             2.6        0.5\n",
+       "rManufacturing           0.8            30.6        7.8\n",
+       "rServices                0.9            12.1       23.0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "labels = pd.Index([\"Agriculture\", \"Manufacturing\", \"Services\"])\n",
+    "rlabels = pd.Index([\"rAgriculture\", \"rManufacturing\", \"rServices\"])\n",
+    "clabels = pd.Index([\"cAgriculture\", \"cManufacturing\", \"cServices\"])\n",
     "\n",
     "Z = pd.DataFrame([\n",
     "    [0.6,2.6,0.5],\n",
     "    [0.8, 30.6, 7.8],\n",
-    "    [0.9,12.1,23]], index=labels, columns=labels)\n",
+    "    [0.9,12.1,23]], index=rlabels, columns=clabels)\n",
     "\n",
     "Z"
    ]
@@ -150,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -163,7 +165,7 @@
        "array([ 3.3, 22.4, 52.5])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -200,7 +202,7 @@
        "array([ 1.9, 28.5, 47.8])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,17 +240,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "rAgriculture       3.7\n",
+       "rManufacturing    39.2\n",
+       "rServices         36.0\n",
+       "dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "rAgriculture       5.6\n",
+       "rManufacturing    67.7\n",
+       "rServices         83.8\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Z_sum = None\n",
-    "x_out = None\n",
-    "x_out"
+    "Z_sum = Z.sum(axis=1)\n",
+    "display(Z_sum)\n",
+    "\n",
+    "# x = z + y \n",
+    "x_out = Z_sum + Y \n",
+    "x_out "
    ]
   },
   {
@@ -274,7 +305,10 @@
    },
    "outputs": [],
    "source": [
+    "# inputs \n",
     "Z_sum = None\n",
+    "\n",
+    "\n",
     "x_in = None\n",
     "x_in"
    ]
@@ -919,7 +953,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.12"
   },
   "vscode": {
    "interpreter": {
